--- a/index.html
+++ b/index.html
@@ -269,10 +269,7 @@
       <div class="color-overlay"></div>
       <div class="color-overlay2"></div>
       <video autoplay loop muted>
-        <source
-          src="./assets/videos/Cotton_Candy_Nebula_4K_Motion_Background.mp4"
-          type="video/mp4"
-        />
+        <source src="./assets/videos/background.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="mobileOverlay-orange"></div>
